@@ -85,7 +85,7 @@ export(read.graph, write.graph, graph.graphdb)
 export(layout.random, layout.circle,
        layout.spring, layout.kamada.kawai, layout.lgl,
        layout.fruchterman.reingold.grid, layout.sphere, layout.merge,
-       layout.reingold.tilford)
+       layout.reingold.tilford, layout.norm)
 
 
 # structural properties
